--- a/app/templates/portcarryout.html
+++ b/app/templates/portcarryout.html
@@ -86,7 +86,7 @@
                     name:'库存',
                     type:'value',
                     min:function(value){
-                        return value.min-20
+                        return (value.min-20).toFixed(2);
                     }
                 },
                 {
