--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -85,13 +85,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2020basis1', '2019basis1', '2018basis1', '2017basis1', '2016basis1', '2015basis1'],
                 source: my_corn_year_basis1_l
@@ -239,13 +239,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2020basis5', '2019basis5', '2018basis5', '2017basis5', '2016basis5', '2015basis5'],
                 source: my_corn_year_basis5_l
@@ -360,13 +360,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2020basis9', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9'],
                 source: my_corn_year_basis9_l
