--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -89,13 +89,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2016c_cs1', '2017c_cs1', '2018c_cs1', '2019c_cs1', '2020c_cs1'],
                 source: my_corn_cs_spread1_year_l
@@ -235,13 +235,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2015c_cs5', '2016c_cs5', '2017c_cs5', '2018c_cs5', '2019c_cs5', '2020c_cs5'],
                 source: my_corn_cs_spread5_year_l
@@ -356,13 +356,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '2015c_cs9', '2016c_cs9', '2017c_cs9', '2018c_cs9', '2019c_cs9', '2020c_cs9'],
                 source: my_corn_cs_spread9_year_l
@@ -477,13 +477,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '1409_1501', '1509_1601', '1609_1701', '1709_1801', '1809_1901', '1909_2001'],
                 source: my_corn_91_year_l
@@ -597,13 +597,13 @@
                 // data: []
             },
             yAxis: {max:50},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '1501_1505', '1601_1605', '1701_1705', '1801_1805', '1901_1905', '2001_2005'],
                 source: my_corn_15_year_l
@@ -715,13 +715,13 @@
                 // data: []
             },
             yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
+            dataZoom: [
+                {
+                    type: 'slider',
+                    start:0,
+                    end:100
+                }
+            ],
             dataset:{
                 dimensions: ['date', '1505_1509', '1605_1609', '1705_1709', '1805_1809', '1905_1909', '2005_2009'],
                 source: my_corn_59_year_l
