--- a/app/templates/deepprocessing.html
+++ b/app/templates/deepprocessing.html
@@ -229,7 +229,7 @@
             //     }
             // ],
             dataset:{
-                dimensions: ['date', '68cs_db_kgl', 'cs_hlj_lr', 'cs_jl_lr', '68cs_sd_kgl', 'cs_sd_lr', '35jj_db_kgl', 'jj_jl_lr', 'jj_hlj_lr', '35jj_hn_kgl', 'jj_hn_lr'],
+                dimensions: ['date', '68cs_db_kgl', 'cs_hlj_lr', 'cs_jl_lr', '68cs_sd_kgl', 'cs_sd_lr', '35jj_db_kgl', 'jj_hlj_lr', 'jj_jl_lr', '35jj_hn_kgl', 'jj_hn_lr'],
                 source: myl1
             },
             series: [
