--- a/app/templates/portcarryout.html
+++ b/app/templates/portcarryout.html
@@ -439,6 +439,10 @@
                     name: '广东港口库存/北港库存',
                     yAxisIndex:0,
                     type: 'line',
+                    lineStyle:{
+                        width:0,
+                    },
+                    color:'LightSteelBlue',
                     // symbol:'none',
                     // symbolSize:0,
                     itemStyle: {normal: {areaStyle: {type: 'default'}}},
@@ -448,7 +452,7 @@
                     name: '散船贸易利润',
                     yAxisIndex:1,
                     type: 'bar',
-                    color:'yellowgreen'
+                    color:'MidnightBlue'
                     // data: {{l4s}}
                 }
             ]
