--- a/app/templates/priceseasonal.html
+++ b/app/templates/priceseasonal.html
@@ -67,13 +67,13 @@
                 return value.min-50
             }
             },
-        // dataZoom: [
-        //     {
-        //         type: 'slider',
-        //         start:0,
-        //         end:100
-        //     }
-        // ],
+        dataZoom: [
+            {
+                type: 'slider',
+                start:0,
+                end:100
+            }
+        ],
         dataset:{
             dimensions: ['date', '09/10', '10/11', '11/12', '12/13', '13/14', '14/15', '15/16', '16/17', '17/18', '18/19', '19/20'],
             source: priceseasonal_l
